--- a/app/src/main/res/layout/fragment_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_baseinfo.xml
@@ -16,20 +16,61 @@
         android:textAppearance="@style/TextAppear.Theme.111111_Size14"/>
 
     <LinearLayout
+        android:paddingLeft="15dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:background="@color/white"
         android:layout_height="wrap_content">
 
         <com.bb.taold.widget.Line_ItemView
+            android:paddingRight="15dp"
             android:id="@+id/item_edu"
             app:left_name="@string/edu"
             app:hint="@string/edu_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <include layout="@layout/line_e" />
+
+        <com.bb.taold.widget.Line_ItemView
+            android:paddingRight="15dp"
+            android:id="@+id/item_address"
+            app:left_name="@string/address"
+            app:hint="@string/address_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:paddingLeft="15dp"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:layout_height="wrap_content">
+
+        <com.bb.taold.widget.Line_ItemView
+            android:paddingRight="15dp"
+            android:id="@+id/tv_company_name"
+            app:left_name="@string/company_name"
+            app:hint="@string/company_name_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <include layout="@layout/line_e" />
+
+        <com.bb.taold.widget.Line_ItemView
+            android:paddingRight="15dp"
+            android:id="@+id/tv_company_address"
+            app:left_name="@string/company_address"
+            app:hint="@string/company_address_hint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
 
