--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -10,6 +10,7 @@
         android:background="@color/color_title">
 
         <TextView
+            android:id="@+id/tv_layouttitle_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="借款"
