--- a/app/src/main/res/layout/activity_loan_records.xml
+++ b/app/src/main/res/layout/activity_loan_records.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <include layout="@layout/layout_title_normal"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_loan_records"
