--- a/app/src/main/res/layout/item_test2.xml
+++ b/app/src/main/res/layout/item_test2.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    android:background="@color/A1">
     <TextView
         android:id="@+id/tv_value"
-        android:layout_width="50dp"
+        android:layout_width="match_parent"
         android:layout_height="20dp"
         android:background="@android:color/holo_red_dark"
-        android:textColor="@drawable/super_oval_red"
         android:text="jjjjj"/>
     <ImageView
         android:id="@+id/iv_test"
